--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,22 @@
 <mat-card class="login-card">
-    <h2>Iniciar Sesión</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Usuario</mat-label>
-        <input matInput formControlName="username" placeholder="Ingresa tu usuario">
-        <mat-error *ngIf="loginForm.get('username')?.invalid">El usuario es requerido</mat-error>
-      </mat-form-field>
-  
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Contraseña</mat-label>
-        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" placeholder="Ingresa tu contraseña">
-        <button mat-icon-button matSuffix (click)="togglePasswordVisibility()" [attr.aria-label]="'Mostrar/ocultar contraseña'">
-          <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-        <mat-error *ngIf="loginForm.get('password')?.invalid">La contraseña es requerida</mat-error>
-      </mat-form-field>
-  
-      <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Iniciar Sesión</button>
-    </form>
-  </mat-card>
-  
+  <img src="assets/logo.png" alt="Logo Colegio Monte Santo" class="logo">
+  <h2>Iniciar Sesión</h2>
+  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Usuario</mat-label>
+      <input matInput formControlName="username" placeholder="Ingresa tu usuario">
+      <mat-error *ngIf="loginForm.get('username')?.invalid">El usuario es requerido</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Contraseña</mat-label>
+      <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" placeholder="Ingresa tu contraseña">
+      <button mat-icon-button matSuffix (click)="togglePasswordVisibility()" [attr.aria-label]="'Mostrar/ocultar contraseña'">
+        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+      <mat-error *ngIf="loginForm.get('password')?.invalid">La contraseña es requerida</mat-error>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+  </form>
+</mat-card>
