--- a/src/app/components/profesor/gestionar-materias/gestionar-materias.component.html
+++ b/src/app/components/profesor/gestionar-materias/gestionar-materias.component.html
@@ -1,27 +1,29 @@
 <div class="container my-4">
     <div class="row">
-        <div class="col-12 d-flex justify-content-between align-items-center mb-3">
-            <h2 class="text-primary">Materias Asignadas</h2>
-        </div>
+      <div class="col-12 d-flex justify-content-between align-items-center mb-3">
+        <h2 class="text-primary">Materias Asignadas</h2>
+      </div>
     </div>
-
+  
     <div class="row">
-        <div class="col-12">
-            <table class="table table-striped table-hover tabla-materias">
-                <thead class="thead-light">
-                    <tr>
-                        <th class="text-center">Nombre</th>
-                        <th class="text-center">Descripción</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let materia of materias">
-                        <td class="text-center">{{ materia.nombre }}</td>
-                        <td class="text-center">{{ materia.descripcion }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+      <div class="col-12">
+        <table class="table table-striped table-hover tabla-materias">
+          <thead class="thead-light">
+            <tr>
+              <th class="text-center">Nombre</th>
+              <th class="text-center">Estado</th>
+              <th class="text-center">Profesor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let materia of materias">
+              <td class="text-center">{{ materia.nombre_materia}}</td>
+              <td class="text-center">{{ materia.estado }}</td>
+              <td class="text-center">{{ materia.nombre_profesor }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-</div>
-<router-outlet></router-outlet>
+  </div>
+  
