--- a/src/app/components/administrador/navbar-admin/navbar-admin.component.html
+++ b/src/app/components/administrador/navbar-admin/navbar-admin.component.html
@@ -32,16 +32,13 @@
             <a class="nav-link text-white" routerLink="/admin/materias" routerLinkActive="active">Gestión de Materias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/admin/evaluaciones" routerLinkActive="active">Evaluaciones y Actividades</a>
+            <a class="nav-link text-white" routerLink="/admin/alumnos" routerLinkActive="active">Gestión de Alumnos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/admin/reportes" routerLinkActive="active">Panel de Reportes</a>
+            <a class="nav-link text-white" routerLink="/admin/profesores" routerLinkActive="active">Gestión de Porfesores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/admin/configuracion" routerLinkActive="active">Configuración del Sistema</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/logout" routerLinkActive="active">Cerrar Sesión</a>
+            <a class="nav-link text-white" routerLink="/admin/aulas" routerLinkActive="active">Gestión de Aulas</a>
           </li>
         </ul>
       </div>
