Ultima actualizacion del repositorio

--- a/src/app/components/administrador/navbar-admin/navbar-admin.component.html
+++ b/src/app/components/administrador/navbar-admin/navbar-admin.component.html
@@ -14,7 +14,7 @@
       </button>
   
       <!-- Logo y nombre del sistema -->
-      <a class="navbar-brand text-white" href="#">
+      <a class="navbar-brand text-white" href="/admin/inicio">
         <img src="assets/logo.png" alt="logo" style="width: 40px;">
         Colegio Monte Santo - Admin
       </a>
@@ -39,6 +39,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="/admin/aulas" routerLinkActive="active">Gestión de Aulas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/login" routerLinkActive="active">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
