--- a/src/app/components/alumnocomponents/navbar/navbar.component.html
+++ b/src/app/components/alumnocomponents/navbar/navbar.component.html
@@ -1,15 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container-fluid">
-      <!-- Botón para el menú colapsable en pantallas pequeñas -->
       <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Logo -->
       <a class="navbar-brand text-white" href="#">
         <img src="assets/logo.png" alt="logo" style="width: 40px;">
         Colegio Monte Santo
       </a>
-      <!-- Opciones del navbar -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
@@ -22,10 +19,10 @@
             <a class="nav-link text-white" routerLink="/alumno/materias" routerLinkActive="active">Materias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/alumno/notas" routerLinkActive="active">Notas</a>
+            <a class="nav-link text-white" routerLink="/alumno/calificaciones" routerLinkActive="active">Calificaciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/alumno/calificaciones" routerLinkActive="active">Calificaciones</a>
+            <a class="nav-link text-white" routerLink="/login" routerLinkActive="active">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
