--- a/src/app/components/profesor/navbar-profesor/navbar-profesor.component.html
+++ b/src/app/components/profesor/navbar-profesor/navbar-profesor.component.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="/profesor/calificaciones" routerLinkActive="active">Calificaciones</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/login" routerLinkActive="active">Cerrar Sesión</a>
+          </li>
         </ul>
       </div>
     </div>
